--- a/libraries/frameworks/shower/themes/ribbon/styles/defaults.scss
+++ b/libraries/frameworks/shower/themes/ribbon/styles/defaults.scss
@@ -11,7 +11,8 @@ $break:1324px;  // Window width for small thumbnails to appear
 $ratio:'16x10'; // Available options: '16x10' or '4x3'
 
 // Colors
-$blue:#4B86C2;
+$blue:#0093d0;
+$darkblue:#262d37;
 $grey:#2A2B2D;
 $yellow:#FAFAA2;
 
