--- a/libraries/frameworks/shower/themes/ribbon/styles/screen.scss
+++ b/libraries/frameworks/shower/themes/ribbon/styles/screen.scss
@@ -130,7 +130,8 @@ a {
 	// Header
 	h2 {
 		margin:0 0 37px;
-		color:#666;
+		/*color:#666;*/
+		color:$darkblue;
 		font:bold 50px/1 'PT Sans Narrow', sans-serif;
 		}
 	// Text
@@ -330,6 +331,12 @@ a {
 				@include underline(currentColor, 0.11);
 				}
 			}
+		&.inverse {
+			background: #FFF;
+			h1, h2, h3, h4, h5, h6 {
+				top: 25%;
+				}
+			}
 		}
 	// Place
 	.place {
@@ -418,7 +425,7 @@ a {
 				height:$height/2;
 				box-shadow:
 					0 0 30px rgba(#000, 0.005),
-					0 20px 50px rgba($grey, 0.6);
+					0 10px 30px rgba($grey, 0.6);
 				border-radius:2px;
 				content:'';
 				transform-origin:0 0;
@@ -440,7 +447,7 @@ a {
 				height:auto;
 				background:none;
 				color:#3C3D40;
-				text-shadow:0 1px 1px #8D8E90;
+				/*text-shadow:0 1px 1px #8D8E90;*/
 				font-weight:bold;
 				transform-origin:0 0;
 				transform:scale(2);
@@ -470,7 +477,7 @@ a {
 						}
 					}
 				&:after {
-					text-shadow:0 1px 1px rgba($grey, 0.6);
+					/*text-shadow:0 1px 1px rgba($grey, 0.6);*/
 					color:$blue;
 					}
 				}
